--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://maddypenuela.com" />
     <meta property="og:title" content="Maddy Peñuela – Oportunidad Real para Cambiar tu Vida" />
     <meta property="og:description" content="Historias reales, resultados reales. Conoce cómo puedes alcanzar tu libertad y propósito con una comunidad latina que te apoya." />
-    <meta property="og:image" content="https://maddypenuela.com/images/maddy-hero.png" />
+    <meta property="og:image" content="https://maddypenuela.com/images/logo-maddy.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="es_US" />
@@ -28,7 +28,7 @@
     <meta name="twitter:url" content="https://maddypenuela.com" />
     <meta name="twitter:title" content="Maddy Peñuela – Oportunidad y Crecimiento" />
     <meta name="twitter:description" content="Una comunidad latina que transforma vidas. Descubre la oportunidad de crecimiento que puede cambiar tu futuro." />
-    <meta name="twitter:image" content="https://maddypenuela.com/images/maddy-hero.png" />
+    <meta name="twitter:image" content="https://maddypenuela.com/images/logo-maddy.png" />
     
     <!-- WhatsApp Preview -->
     <meta property="og:image:alt" content="Maddy Peñuela - Oportunidad de Crecimiento Personal y Financiero" />
